# sdss_spectra_classification

./: README.md  extractor.py
data/: galaxy_orig.csv  galaxy_spectra_links  qso_orig.csv  qso_spectra_links  star_orig.csv  star_spectra_links
glopt/: CMakeLists.txt  glopt.py  glopt.py~
notebooks/: 00_visualize_training_Set.ipynb  02_model_selection.ipynb  03_classification.ipynb
