cmake_minimum_required(VERSION 2.8)
project(glopt)

if(TARGET glopt)
    return()
endif(TARGET glopt)

get_directory_property(PARENT_DIRECTORY_TMP PARENT_DIRECTORY)
if (PARENT_DIRECTORY_TMP)
    set(GAUSS_GLOPT_MODULE "${CMAKE_CURRENT_SOURCE_DIR}" PARENT_SCOPE)
endif()

install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/__init__.py" DESTINATION "common/glopt/" PERMISSIONS OWNER_READ)
install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/glopt.py" DESTINATION "common/glopt/" PERMISSIONS OWNER_WRITE OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

